# novel-translator-studio

./: .gitignore  AGENTS.md  AGENTS_PHASE3_APPEND.md  GLOBAL_AGENTS.example.md  README.md  README_PHASE3_UPDATE_VI.md  README_SETUP_VI.md  manifest.json  mvp5e1_wip.patch  pyproject.toml  skills-lock.json
config/: budget-limits.example.yaml  nlp.example.yaml  providers.example.yaml  providers.yaml  task-routing.example.yaml
docs/codex-prompts/: PHASE3_REVIEW_PROMPT.md  (+3 more)
migrations/: 0001_mvp0_initial_tables.sql  0002_mvp1_text_tables.sql  0003_mvp1_memory_tables.sql  0004_mvp3_export_bundles.sql  0005_mvp4a_manga_tables.sql  0006_mvp5e_nlp_analysis_runs.sql  0007_mvp5f_project_dictionary.sql  0008_mvp5g_rule_candidates.sql  0009_phase9a_manga_project_import_runs.sql  0010_phase9b_manga_preprocess_runs.sql  0011_phase9c_manga_detection_runs.sql
scripts/: apply-phase3-update-windows.ps1  setup-workspace-mac-linux.sh  setup-workspace-windows.bat
tests/: test_mvp0_cli.py  test_mvp1.py  test_mvp2.py  test_mvp3.py  test_mvp45_eval.py  test_mvp49_mvp5a.py  test_mvp4a.py  test_mvp5b_learning.py  test_mvp5c_resumable_learning.py  test_mvp5d5_memory_impact.py  test_mvp5d_approved_memory_validation.py  test_mvp5e_chinese_nlp.py  test_mvp5f_dictionary.py  test_mvp5g_rules.py  test_mvp5h_hybrid_prompt.py  test_mvp5h_lite_dictionary_prompt.py  test_mvp5i_production_rollout.py  test_phase7_gui.py  test_phase9a_manga_import_project_model.py  test_phase9b_manga_preprocessing.py  test_phase9c_manga_detection.py  test_phase9g_manga_cleaning.py  test_phase9m3_real_residual_pages_8_10.py
(+183 files in other folders)
