[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-translator-studio"
version = "0.1.0"
description = "MVP0 scaffold for Novel Translator Studio"
readme = "README_SETUP_VI.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
nts = "nts_cli.main:app"

[tool.setuptools.packages.find]
where = ["packages", "apps/cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages", "apps/cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

